@@ -3,6 +3,12 @@
 	* interfaces/R/igraph/R/plot.R (plot.igraph) : plot edge labels
 	at one third of the edge to allow better plotting of mutual edges
 
+2008-02-21  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/conversion.R (igraph.from.graphNEL)
+	(igraph.to.graphNEL)
+	* interfaces/R/src/rinterface.c.in (R_SEXP_to_igraph_adjlist) : added
+
 2008-02-18  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/plot.shapes.R : handle graphs which contain 
